Changes between 1.2.2 and ???:
---------------

 [pulse-binding]

 * Removed `Option` wrapper around `Operation` objects, using assertion that the inner pointer is
   not null.
 * Assert added to block use of threaded mainloop `lock` method from within the event loop thread
   (i.e. within most instances of callback execution).
 * Stream: Renamed `proplist_remove` to `remove_proplist`

Changes between 1.2.1 and 1.2.2:
---------------

 [pulse-binding]

 * Format: Restored access to `Info`'s `ptr` attribute

Changes between 1.2.0 and 1.2.1:
---------------

 [pulse-binding]

 * Stream: Fix use-after-frees with `get_format_info` and `get_context`. These should have used
   `from_raw_weak` instead of `from_raw` to avoid incorrectly freeing the underlying C object,
   leaving a dangling pointer.

Changes between 1.1.0 and 1.2.0:
---------------

 [project]

 * Further licensing clarification

 [pulse-binding]

 * Fixed lifetime issues with a handful of stream methods.
 * Fixed lifetime issues with `get_api` mainloop method.
 * mainloop/standard: Fixed `run` method's return data. Incorrectly was returning function call
   result, while claiming in the documentation that this was the quit retval, which wasn't returned
   at all.
 * Tidied up error code handling:
    - add `PAErr` wrapper for i32 error type, for cleaner interfaces
    - move `strerror` function to `PAErr` method
    - rename `sterror` `PAErr` and `Code` methods to `to_string`
    - convert the error CStr to String for the users, no need to make users do it
    - add `PAErr` <=> `Code` `From` impls
 * Simplified volume handling:
    - `Volume` and `VolumeDB` are now wrappers rather than type aliases
    - Added the `VolumeLinear` wrapper. I had mistakenly taken floating point volumes to all be dB
      values, but there is actually a distinction between dB and 'linear factor', as per the C API
      conversion functions. This is now used in linear related conversions, which thus no longer